--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Portfolio for pethaf</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+  <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+  <link rel="stylesheet"  href="main.css">
 </head>
+<body>
 <nav class="navbar navbar-inverse bg-inverse">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -34,7 +36,8 @@
     </header>
   <div class="row">
   <div class="col-md-8">
-    <p class="lead">Some very interesting text with an introduction about me and what I know how to do. Maybe even something about what I have done previously.
+    <p class="lead">Portfolio page for pethaf. Trying to learn web development
+      technologies.
     </p>
   </div>
   <div class="col-md-4">
@@ -48,7 +51,7 @@
 <div class="jumbotron" id="portfolio">
 <div class="row">
   <header class="col-md-12">
-    <h3 class="text-center text-uppercase display-3" name="portfolio"> Portfolio</h1>
+    <h3 class="text-center text-uppercase display-3" name="portfolio"> Previous projects</h1>
   </header>
   </div>
 <div class="row">
@@ -107,15 +110,16 @@
   </div>
     <div class="row">
     <div class="col-md-6">
-      <form>
+<form >
 <fieldset class="form-group">
-<input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+<input type="text" class="form-control" id="name" name="name" placeholder="Name" type="text" required>
 </fieldset>
 <fieldset class="form-group">
-<input type="input type="email" class="form-control" id="email" name="email" placeholder="user@domain.com" required>
+<input type="email" class="form-control" id="email"
+name="email" placeholder="user@domain.com" type="email" required>
 </fieldset>
 <fieldset class="form-group">
-<input type="input type="tel" class="form-control" id="phone" name="phone" placeholder="phonenumber" required>
+<input type="tel" class="form-control" id="phone" name="phone" placeholder="phonenumber" required>
 </fieldset>
 <fieldset class="form-group">
 <textarea class="input form-control" id="message" name="message" placeholder="Message" rows="5" cols="5" placeholder="Message"></textarea>
@@ -130,10 +134,15 @@
     </div>
   </div>
     <footer class="col-md-4 offset-md-4">
-      <i class="fa fa-facebook fa-4x" aria-hidden="true"></i>
-      <i class="fa fa-linkedin fa-4x" aria-hidden="true"></i>
-      <i class="fa fa-twitter fa-4x" aria-hidden="true"></i>
+      <i class="fa fa-free-code-camp fa-4x" aria-hidden="true"></i>
+      <i class="fa fa-github fa-4x" aria-hidden="true"></i>
+      <i class="fa fa-codepen fa-4x" aria-hidden="true"></i>
     </footer>
   </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<script src="https://use.fontawesome.com/4340415043.js"></script>
+<script src="main.js" async></script>
+</body>
 </html>
