--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ name="email" placeholder="user@domain.com" type="email" required>
 <input type="tel" class="form-control" id="phone" name="phone" placeholder="phonenumber" required>
 </fieldset>
 <fieldset class="form-group">
-<textarea class="input form-control" id="message" name="message" placeholder="Message" rows="5" cols="5" placeholder="Message"></textarea>
+<textarea class="input form-control" id="message" name="message" placeholder="Message" rows="5" cols="5" placeholder="Message" required></textarea>
 </fieldset>
 <button type="submit" class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
 </form>
