--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   <link rel="stylesheet"  href="main.css">
 </head>
 <body>
-<nav class="navbar navbar-inverse bg-inverse">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="https://www.freecodecamp.com/pethaf" target="_blank">Pethaf</a>
+<nav class="navbar-inverse bg-inverse">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="https://www.freecodecamp.com/pethaf" target="_blank">Pethaf</a>
 
-  <div class="collapse navbar-collapse" id="dropdown">
-    <ul class="nav justify-content-center mr-auto mt-2 mt-md-0">
-      <li class="nav-item">
-        <a class="nav-link text-uppercase" href="#about">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-uppercase" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-uppercase" href="#contact">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse" id="dropdown">
+      <ul class="nav justify-content-center mr-auto mt-2 mt-md-0">
+        <li class="nav-item">
+          <a class="nav-link text-uppercase" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-uppercase" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-uppercase" href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 <div class="container">
   <section class="jumbotron" name="about">
@@ -160,20 +160,10 @@
     <div class="col-md-6">
 <form >
 <fieldset class="form-group">
-<input type="text" class="form-control" id="name" name="name"
-placeholder="Name" type="text" required>
-</fieldset>
-<fieldset class="form-group">
-<input type="email" class="form-control" id="email"
-       name="email" placeholder="user@domain.com" type="email" required>
-</fieldset>
-<fieldset class="form-group">
-<input type="tel" class="form-control" id="phone" name="phone"
-       placeholder="phonenumber" required>
-</fieldset>
-<fieldset class="form-group">
-<textarea class="input form-control" id="message" required
-          name="message" rows="5" cols="5" placeholder="Message"></textarea>
+<input type="text" class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+<input type="email" class="form-control" id="email" name="email" placeholder="user@domain.com" type="email" required>
+<input type="tel" class="form-control" id="phone" name="phone" placeholder="phonenumber" required>
+<textarea class="input form-control" id="message" required name="message" rows="5" cols="5" placeholder="Message"></textarea>
 </fieldset>
 <button type="submit"
         class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
@@ -199,7 +189,7 @@ placeholder="Name" type="text" required>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/4340415043.js"></script>
 <script src="main.js"></script>
