Made navbar sticky

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet"  href="main.css">
 </head>
 <body>
-<nav class="navbar-inverse bg-inverse">
+<nav class="navbar-inverse bg-inverse sticky-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -163,7 +163,7 @@
 <input type="text" class="form-control" id="name" name="name" placeholder="Name" type="text" required>
 <input type="email" class="form-control" id="email" name="email" placeholder="user@domain.com" type="email" required>
 <input type="tel" class="form-control" id="phone" name="phone" placeholder="phonenumber" required>
-<textarea class="input form-control" id="message" required name="message" rows="5" cols="5" placeholder="Message"></textarea>
+<textarea class="input form-control" id="message" name="message" rows="5" cols="5" placeholder="Message" ></textarea>
 </fieldset>
 <button type="submit"
         class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
