Fix links to previous projects

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h3> Pomodoro Timer</h3>
 </header>
   <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/debug/LLGJbb/XBkGRoWxOzgA">
+  <a href="https://codepen.io/pethaf/full/LLGJbb/">
   <img src="Images/Pomodoro.png"
    class="figure-img img-fluid rounded mx-auto d-bloc"
    alt="A screenshot for the pomodoro timer">
@@ -75,7 +75,7 @@
   <h3> Electronic Calculator</h3>
 </header>
     <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/debug/EXjaLo/RBAOJepvzVRr">
+  <a href="https://s.codepen.io/pethaf/full/EXjaLo/RBAOJepvzVRr">
   <img src="Images/Calculator.png"
   class="figure-img img-fluid rounded mx-auto d-bloc"
   alt="A screenshot for the electronic calculator replica">
@@ -92,7 +92,7 @@
   <h3> Wikipedia Viewer</h3>
 </header>
   <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/debug/XRGeKz/dXAqBbnopqDk">
+  <a href="https://s.codepen.io/pethaf/full/XRGeKz/dXAqBbnopqDk">
   <img src="Images/Wikipedia.png"
   class="figure-img img-fluid rounded mx-auto d-bloc"
   alt="A screenshot for the wikipedia viewer">
@@ -106,7 +106,7 @@
   <h3> Twitch Viewer</h3>
 </header>
     <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/debug/rmbEqP/LDAmdVWxpwnr">
+  <a href="https://s.codepen.io/pethaf/full/rmbEqP/LDAmdVWxpwnr">
   <img src="Images/Twitch.png"
   class="mx-auto d-bloc figure-img img-fluid rounded"
   alt="A screenshot for project 4">
@@ -122,7 +122,7 @@
     <h3> Random Quote Machine</h3>
   </header>
     <figure class="figure">
-    <a href="https://s.codepen.io/pethaf/debug/GmWeNp/gaAeYJveynQA">
+    <a href="https://s.codepen.io/pethaf/full/GmWeNp/gaAeYJveynQA">
     <img src="Images/Quote.png"
     class="figure-img img-fluid rounded mx-auto d-bloc"
     alt="A screenshot for the wikipedia viewer">
@@ -136,7 +136,7 @@
     <h3> Local Weather</h3>
   </header>
       <figure class="figure">
-    <a href="https://s.codepen.io/pethaf/debug/BRRVea/mVkbGEqvaOvM">
+    <a href="https://s.codepen.io/pethaf/full/BRRVea/mVkbGEqvaOvM">
     <img src="Images/Weather.png"
     class="mx-auto d-bloc figure-img img-fluid rounded"
     alt="A screenshot for project 4">
