Made cat picture local

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </p>
   </div>
   <div class="col-md-4">
-      <img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/286.jpg" class="img-fluid rounded-circle" alt="a friendly kitten">
+      <img src="Images/Cat.jpg" class="img-fluid rounded-circle" alt="a friendly kitten">
     </img>
   </div>
   </div>
