Make site more semantic

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet"  href="main.css">
 </head>
 <body>
+  <h1 class="navigation">portfolio site for pethaf</h1>
 <nav class="navbar-inverse bg-inverse sticky-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <h2 class="navigation">Site navigation</h2>
     <a class="navbar-brand" href="https://www.freecodecamp.com/pethaf" target="_blank">Pethaf</a>
-
     <div class="collapse navbar-collapse" id="dropdown">
       <ul class="nav justify-content-center mr-auto mt-2 mt-md-0">
         <li class="nav-item">
@@ -31,9 +32,7 @@
 
 <div class="container">
   <section class="jumbotron" id="about">
-    <header class="col-md-12">
-      <h3 class="text-center text-uppercase display-3">About Me</h3>
-    </header>
+      <h2 class="text-center text-uppercase display-3 col-md-12">About Me</h2>
   <div class="row">
   <div class="col-md-8">
     <p class="lead">Portfolio page for pethaf. Trying to learn web development
@@ -49,15 +48,11 @@
 <section class="container" id="container-2">
 <div class="jumbotron" id="portfolio">
 <div class="row">
-  <header class="col-md-12">
-    <h3 class="text-center text-uppercase display-3"> Previous projects</h3>
-  </header>
+    <h2 class="text-center text-uppercase display-3 col-md-12"> Previous projects</h2>
   </div>
 <div class="row">
 <div class="col-md-4">
-<header class="col-md-12">
   <h3> Pomodoro Timer</h3>
-</header>
   <figure class="figure">
   <a href="https://codepen.io/pethaf/full/LLGJbb/">
   <img src="Images/Pomodoro.png"
@@ -70,9 +65,7 @@
 </figure>
 </div>
   <div class="offset-md-4 col-md-4">
-<header class="col-md-12">
   <h3> Electronic Calculator</h3>
-</header>
     <figure class="figure">
   <a href="https://s.codepen.io/pethaf/full/EXjaLo/RBAOJepvzVRr">
   <img src="Images/Calculator.png"
@@ -87,9 +80,7 @@
 </div>
   <div class="row">
 <div class="col-md-4">
-<header class="col-md-12">
   <h3> Wikipedia Viewer</h3>
-</header>
   <figure class="figure">
   <a href="https://s.codepen.io/pethaf/full/XRGeKz/dXAqBbnopqDk">
   <img src="Images/Wikipedia.png"
@@ -102,9 +93,7 @@
 </figure>
 </div>
   <div class="offset-md-4 col-md-4">
-<header class="col-md-12">
   <h3> Twitch Viewer</h3>
-</header>
     <figure class="figure">
   <a href="https://s.codepen.io/pethaf/full/rmbEqP/LDAmdVWxpwnr">
   <img src="Images/Twitch.png"
@@ -120,9 +109,7 @@
 </div>
 <div class="row">
   <div class="col-md-4">
-  <header class="col-md-12">
     <h3> Random Quote Machine</h3>
-  </header>
     <figure class="figure">
     <a href="https://s.codepen.io/pethaf/full/GmWeNp/gaAeYJveynQA">
     <img src="Images/Quote.png"
@@ -135,9 +122,7 @@
   </figure>
   </div>
     <div class="offset-md-4 col-md-4">
-  <header class="col-md-12">
     <h3> Local Weather</h3>
-  </header>
       <figure class="figure">
     <a href="https://s.codepen.io/pethaf/full/BRRVea/mVkbGEqvaOvM">
     <img src="Images/Weather.png"
@@ -156,9 +141,7 @@
 <section class="container">
   <div class="jumbotron" id="contact">
   <div class="row">
-    <header class="col-md-12">
-      <h3 class="display-3 text-uppercase text-center">Contact Me</h3>
-    </header>
+      <h2 class="display-3 text-uppercase text-center col-md-12">Contact Me</h2>
   </div>
     <div class="row">
     <div class="col-md-6">
