Change color scheme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8">
   <title>Portfolio for pethaf</title>
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-  <link rel="stylesheet"  href="main.css">
+  <link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
+  <div class="row">
+    <div class="col-md-12">
   <h1 class="navigation">portfolio site for pethaf</h1>
+  </div>
+</div>
 <nav class="navbar-inverse bg-inverse sticky-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -178,6 +182,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/4340415043.js"></script>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
