More fixes in semantic structure

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="row">
     <div class="col-md-12">
-  <h1 class="navigation">portfolio site for pethaf</h1>
+      <h1 class="navigation">portfolio site for pethaf</h1>
+    </div>
   </div>
-</div>
-<nav class="navbar-inverse bg-inverse sticky-top">
+  <nav class="navbar-inverse bg-inverse sticky-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#dropdown" aria-controls="dropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -34,154 +34,194 @@
     </div>
   </nav>
 
-<div class="container">
-  <section class="jumbotron" id="about">
-      <h2 class="text-center text-uppercase display-3 col-md-12">About Me</h2>
-  <div class="row">
-  <div class="col-md-8">
-    <p class="lead">Portfolio page for pethaf. Trying to learn web development
-      technologies.
-    </p>
-  </div>
-  <div class="col-md-4">
-      <img src="Images/Cat.jpg" class="img-fluid rounded-circle" alt="a friendly kitten">
-  </div>
-  </div>
-</section>
-</div>
-<section class="container" id="container-2">
-<div class="jumbotron" id="portfolio">
-<div class="row">
-    <h2 class="text-center text-uppercase display-3 col-md-12"> Previous projects</h2>
-  </div>
-<div class="row">
-<div class="col-md-4">
-  <h3> Pomodoro Timer</h3>
-  <figure class="figure">
-  <a href="https://codepen.io/pethaf/full/LLGJbb/">
-  <img src="Images/Pomodoro.png"
-   class="figure-img img-fluid rounded mx-auto d-bloc"
-   alt="A screenshot for the pomodoro timer">
-</a>
-  <figcaption class=" text-center figure-caption">
-    Simple pomodoro timer made with plain javascript and html5 canvas.
-    </figcaption>
-</figure>
-</div>
-  <div class="offset-md-4 col-md-4">
-  <h3> Electronic Calculator</h3>
-    <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/full/EXjaLo/RBAOJepvzVRr">
-  <img src="Images/Calculator.png"
-  class="figure-img img-fluid rounded mx-auto d-bloc"
-  alt="A screenshot for the electronic calculator replica">
-</a>
-  <figcaption class="text-center figure-caption">
-    Electronic calculator replica made with vanilla js and html5.
-    </figcaption>
-</figure>
-</div>
-</div>
-  <div class="row">
-<div class="col-md-4">
-  <h3> Wikipedia Viewer</h3>
-  <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/full/XRGeKz/dXAqBbnopqDk">
-  <img src="Images/Wikipedia.png"
-  class="figure-img img-fluid rounded mx-auto d-bloc"
-  alt="A screenshot for the wikipedia viewer"></a>
-  <figcaption class="figure-caption text-center">
-    Interface for searching wikipedia articles.
-    Made with twitter bootstrap 4 and jQuery.
-  </figcaption>
-</figure>
-</div>
-  <div class="offset-md-4 col-md-4">
-  <h3> Twitch Viewer</h3>
-    <figure class="figure">
-  <a href="https://s.codepen.io/pethaf/full/rmbEqP/LDAmdVWxpwnr">
-  <img src="Images/Twitch.png"
-  class="mx-auto d-bloc figure-img img-fluid rounded"
-  alt="A screenshot for project 4">
-</a>
-  <figcaption class="text-center figure-caption">
-    Utility for checking status of twitch streams.
-    Made with jQuery and HTML5.
-  </figcaption>
-</figure>
-</div>
-</div>
-<div class="row">
-  <div class="col-md-4">
-    <h3> Random Quote Machine</h3>
-    <figure class="figure">
-    <a href="https://s.codepen.io/pethaf/full/GmWeNp/gaAeYJveynQA">
-    <img src="Images/Quote.png"
-    class="figure-img img-fluid rounded mx-auto d-bloc"
-    alt="A screenshot for the wikipedia viewer"></a>
-    <figcaption class="figure-caption text-center">
-      Fetches a random quote and allows user to retweet it.
-      Made with jQuery and Twitter Bootstrap 4.
-    </figcaption>
-  </figure>
-  </div>
-    <div class="offset-md-4 col-md-4">
-    <h3> Local Weather</h3>
-      <figure class="figure">
-    <a href="https://s.codepen.io/pethaf/full/BRRVea/mVkbGEqvaOvM">
-    <img src="Images/Weather.png"
-    class="mx-auto d-bloc figure-img img-fluid rounded"
-    alt="A screenshot for project 4">
-  </a>
-    <figcaption class="text-center figure-caption">
-    Displays local weather. User location determined through the GeoLocation
-    interface. Made with Twitter Bootstrap 4 and jQuery.
-  </figcaption>
-</figure>
-  </div>
-</div>
-</div>
-  </section>
-<section class="container">
-  <div class="jumbotron" id="contact">
-  <div class="row">
-      <h2 class="display-3 text-uppercase text-center col-md-12">Contact Me</h2>
-  </div>
-    <div class="row">
-    <div class="col-md-6">
-<form>
-<fieldset class="form-group">
-<input type="text" class="form-control" id="name" name="name" placeholder="NAME" required>
-<input type="email" class="form-control" id="email" name="email" placeholder="USER@DOMAIN.COM" required>
-<input type="tel" class="form-control" id="phone" name="phone" placeholder="555-555-555" required>
-<textarea class="input form-control" id="message" name="message" rows="5" cols="5" placeholder="MESSAGE" ></textarea>
-</fieldset>
-<button type="submit"
-        class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
-</form>
-
+  <section id="about">
+    <div class="container">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="text-center text-uppercase display-3">About Me</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8">
+            <p class="lead"> Main page for pethaf. Here I gather the various
+              projects I have done. 
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="Images/Cat.jpg" class="img-fluid rounded-circle" alt="a friendly kitten">
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-6 info">
-      Leave a message for me and I will get back to you as soon as possible. Making the message as short as possible will make it easier for me to process.
+  </section>
+
+  <section id="portfolio">
+    <div class="container">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="text-center text-uppercase display-3"> Previous projects</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <h3> Pomodoro Timer</h3>
+            <figure class="figure">
+              <a href="https://codepen.io/pethaf/full/LLGJbb/" target="_blank">
+                <img src="Images/Pomodoro.png"
+                class="figure-img img-fluid rounded mx-auto d-bloc"
+                alt="A screenshot for the pomodoro timer">
+              </a>
+              <figcaption class=" text-center figure-caption">
+                Simple pomodoro timer made with plain javascript and html5 canvas.
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="offset-md-4 col-md-4">
+            <h3> Electronic Calculator</h3>
+            <figure class="figure">
+              <a href="https://s.codepen.io/pethaf/full/EXjaLo/RBAOJepvzVRr"
+              target="_blank">
+              <img src="Images/Calculator.png"
+              class="figure-img img-fluid rounded mx-auto d-bloc"
+              alt="A screenshot for the electronic calculator replica">
+            </a>
+            <figcaption class="text-center figure-caption">
+              Electronic calculator replica made with vanilla js and html5.
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <h3> Wikipedia Viewer</h3>
+          <figure class="figure">
+            <a href="https://s.codepen.io/pethaf/full/XRGeKz/dXAqBbnopqDk"
+            target="_blank">
+            <img src="Images/Wikipedia.png"
+            class="figure-img img-fluid rounded mx-auto d-bloc"
+            alt="A screenshot for the wikipedia viewer"></a>
+            <figcaption class="figure-caption text-center">
+              Interface for searching wikipedia articles.
+              Made with twitter bootstrap 4 and jQuery.
+            </figcaption>
+          </figure>
+        </div>
+
+        <div class="offset-md-4 col-md-4">
+          <h3> Twitch Viewer</h3>
+          <figure class="figure">
+            <a href="https://s.codepen.io/pethaf/full/rmbEqP/LDAmdVWxpwnr"
+            target="_blank">
+            <img src="Images/Twitch.png"
+            class="mx-auto d-bloc figure-img img-fluid rounded"
+            alt="A screenshot for project 4">
+          </a>
+          <figcaption class="text-center figure-caption">
+            Utility for checking status of twitch streams.
+            Made with jQuery and HTML5.
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <h3> Random Quote Machine</h3>
+        <figure class="figure">
+          <a href="https://s.codepen.io/pethaf/full/GmWeNp/gaAeYJveynQA"
+          target="_blank">
+          <img src="Images/Quote.png"
+          class="figure-img img-fluid rounded mx-auto d-bloc"
+          alt="A screenshot for the wikipedia viewer"></a>
+          <figcaption class="figure-caption text-center">
+            Fetches a random quote and allows user to retweet it.
+            Made with jQuery and Twitter Bootstrap 4.
+          </figcaption>
+        </figure>
+      </div>
+      <div class="offset-md-4 col-md-4">
+        <h3> Local Weather</h3>
+        <figure class="figure">
+          <a href="https://s.codepen.io/pethaf/full/BRRVea/mVkbGEqvaOvM"
+          target="_blank">
+          <img src="Images/Weather.png"
+          class="mx-auto d-bloc figure-img img-fluid rounded"
+          alt="A screenshot for project 4">
+        </a>
+        <figcaption class="text-center figure-caption">
+          Displays local weather. User location determined through the GeoLocation
+          interface. Made with Twitter Bootstrap 4 and jQuery.
+        </figcaption>
+      </figure>
+    </div>
+  </div>
+</div>
+</section>
+
+
+<section id="contact">
+  <div class="container">
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="display-3 text-uppercase text-center">Contact Me</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <form>
+            <fieldset class="form-group">
+              <input type="text" class="form-control" id="name"
+              name="name" placeholder="NAME" required>
+              <input type="email" class="form-control" id="email"
+              name="email" placeholder="USER@DOMAIN.COM" required>
+              <input type="tel" class="form-control" id="phone" name="phone"
+              placeholder="555-555-555" required>
+              <textarea class="input form-control" id="message"
+              name="message" rows="5" cols="5" placeholder="MESSAGE" >
+            </textarea>
+          </fieldset>
+          <button type="submit"
+          class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
+        </form>
+
+      </div>
+      <div class="col-md-6 info">
+        Leave a message for me and I will get back to you as soon as possible.
       </div>
     </div>
   </div>
+</div>
 </section>
-    <footer class="col-md-4 offset-md-4" id="links">
+
+<footer id="links">
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
       <i class="fa fa-free-code-camp fa-4x" aria-hidden="true"
-       data-toggle="tooltip" data-placement="top"
-       title="See more projects on freecodecamp"></i>
-      <i class="fa fa-github fa-4x" aria-hidden="true" data-toggle="tooltip"
+      data-toggle="tooltip" data-placement="top"
+      title="See more projects on freecodecamp"></i>
+      <i class="fa fa-github fa-4x" aria-hidden="true"
+      data-toggle="tooltip"
       data-placement="top"
       title="See more projects on github"></i>
-      <i class="fa fa-codepen fa-4x" aria-hidden="true" data-toggle="tooltip"
+      <i class="fa fa-codepen fa-4x"
+      aria-hidden="true" data-toggle="tooltip"
       data-placement="top"
       title="See more projects on codepen"></i>
     </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
-<script src="https://use.fontawesome.com/4340415043.js"></script>
-<script src="js/main.js"></script>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+  </script>
+  <script src="https://use.fontawesome.com/4340415043.js">
+  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
