--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="row">
     <div class="col-md-12">
-      <h1 class="navigation">portfolio site for pethaf</h1>
+      <h1 class="navigation">Portfolio site for pethaf</h1>
     </div>
   </div>
   <nav class="navbar-inverse bg-inverse sticky-top">
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-md-8">
             <p class="lead"> Main page for pethaf. Here I gather the various
-              projects I have done. 
+              projects I have done.
             </p>
           </div>
           <div class="col-md-4">
