Add container for first element

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet"  href="css/main.css">
 </head>
 <body>
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="navigation">Portfolio site for pethaf</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="navigation">Portfolio site for pethaf</h1>
+      </div>
     </div>
   </div>
   <nav class="navbar-inverse bg-inverse sticky-top">
@@ -213,17 +215,17 @@
       aria-hidden="true" data-toggle="tooltip"
       data-placement="top"
       title="See more projects on codepen"></i>
-      </div>
     </div>
-    </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
-  </script>
-  <script src="https://use.fontawesome.com/4340415043.js">
-  </script>
-  <script src="js/main.js"></script>
+  </div>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+</script>
+<script src="https://use.fontawesome.com/4340415043.js">
+</script>
+<script src="js/main.js"></script>
 </body>
 </html>
