Change submit button

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </textarea>
           </fieldset>
           <button type="submit"
-          class="btn btn-default btn-primary mx-auto" id="submit">Submit</button>
+          class="btn btn-default btn-primary mx-auto" id="submit">Send!</button>
         </form>
 
       </div>
