--- a/index.html
+++ b/index.html
@@ -45,12 +45,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-8">
-            <p class="lead"> Main page for pethaf. Here I gather the various
-              projects I have done.
+          <div class="col-xs-8">
+            <p class="lead"> Main page for pethaf.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-xs-4">
             <img src="Images/Cat.jpg" class="img-fluid rounded-circle" alt="a friendly kitten">
           </div>
         </div>
@@ -202,6 +201,7 @@
 </section>
 
 <footer id="links">
+  <div class="container">
   <div class="row">
     <div class="col-md-4 offset-md-4">
       <i class="fa fa-free-code-camp fa-4x" aria-hidden="true"
@@ -217,7 +217,9 @@
       title="See more projects on codepen"></i>
     </div>
   </div>
+</div>
 </footer>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js">
